force-app/main/default/objects/OM_SAC_accionesCorrectivas__c/OM_SAC_accionesCorrectivas__c.object-meta.xml
<CustomObject>
    <label>Acciones correctivas</label>
    <nameField>
        <label>Nombre</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Acciones correctivas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>