force-app/main/default/objects/OM_SAC_accionesCorrectivas__c/fields/OM_SAC_descripcion__c.field-meta.xml
<CustomField>
    <fullName>OM_SAC_descripcion__c</fullName>
    <label>Descripción</label>
    <length>255</length>
    <type>Text</type>
</CustomField>