force-app/main/default/objects/OM_SAC_accionesCorrectivas__c/fields/OM_SAC_estado__c.field-meta.xml
<CustomField>
    <fullName>OM_SAC_estado__c</fullName>
    <label>Estado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Corregido</fullName>
            </value>
            <value>
                <fullName>No corregido</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>