force-app/main/default/objects/OM_SAC_accionesCorrectivas__c/fields/OM_SAC_fecha__c.field-meta.xml
<CustomField>
    <fullName>OM_SAC_fecha__c</fullName>
    <label>Fecha</label>
    <type>Date</type>
</CustomField>