force-app/main/default/objects/OM_SAC_accionesCorrectivas__c/fields/OM_SAC_insatisfaccion__c.field-meta.xml
<CustomField>
    <fullName>OM_SAC_insatisfaccion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Insatisfacción</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Acciones correctivas</relationshipLabel>
    <relationshipName>OM_SAC_accionesCorrectivas</relationshipName>
    <type>Lookup</type>
</CustomField>