force-app/main/default/objects/OM_SAC_accionesCorrectivas__c/fields/OM_SAC_Responsable__c.field-meta.xml
<CustomField>
    <fullName>OM_SAC_Responsable__c</fullName>
    <label>Responsable</label>
    <length>255</length>
    <type>Text</type>
</CustomField>